Fixed content cutoff on new project page

--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -132,4 +132,7 @@ $devit-black: #111111;
     p.commit{
       margin-left: 20px;
     }
+    .buttons{
+      display: flex;
+    }
   }
